Able to return a fully populated colony from getColonyById
