# src/main/resources/openapi-group-23.yaml
@@ -92,7 +92,7 @@ paths:
                   $ref: '#/components/schemas/Colony'
         '404':
           description: Method not found
-  /api/colony/{companyId}:
+  /api/colony/{colonyId}:
     get:
       summary: Retrieve a colony's info.
       tags:
@@ -101,7 +101,7 @@ paths:
       operationId: getColonyById
       parameters:
         - in : path
-          name: companyId
+          name: colonyId
           schema:
             type: integer
           required: true
